[gd_scene load_steps=9 format=3 uid="uid://shrine_test_scene_001"]

[ext_resource type="Script" path="res://scripts/testing/ShrineSystemTest.gd" id="1_test_controller"]
[ext_resource type="PackedScene" uid="uid://dho5nhabi6q0i" path="res://scenes/player/Player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://c2h9m5n7p3k1x" path="res://scenes/interactables/HealthShrine.tscn" id="3_health_shrine"]
[ext_resource type="PackedScene" uid="uid://d3k8n6p2m5h9x" path="res://scenes/interactables/DamageShrine.tscn" id="4_damage_shrine"]
[ext_resource type="PackedScene" uid="uid://b9m7k4n1p6h2y" path="res://scenes/interactables/SpeedShrine.tscn" id="5_speed_shrine"]

[sub_resource type="PlaneMesh" id="PlaneMesh_ground"]
size = Vector2(50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(50, 0.1, 50)

[sub_resource type="Environment" id="Environment_test"]
background_mode = 1
background_color = Color(0.2, 0.2, 0.2, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[node name="ShrineSystemTest" type="Node3D"]

[node name="TestController" type="Node" parent="."]
script = ExtResource("1_test_controller")

[node name="Ground" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_ground")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ground")

[node name="Player" parent="." groups=["player"] instance=ExtResource("2_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="HealthShrine" parent="." instance=ExtResource("3_health_shrine")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)

[node name="DamageShrine" parent="." instance=ExtResource("4_damage_shrine")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)

[node name="SpeedShrine" parent="." instance=ExtResource("5_speed_shrine")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_test")
